[package]
name = "blockparser"
version = "0.1.0"
authors = ["Igor Di Paolo <ipaolo@internal.oculus-tech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
byteorder = "1"
env_logger = "0.8.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"